--- a/style/style.css
+++ b/style/style.css
@@ -84,6 +84,7 @@ button:hover{
     float: right;
     margin-top: 35%;
     margin-right: 5%;
+    padding-bottom: 20px;
 }
 .sm > div {
     border: 1px solid white;
