--- a/style/style.css
+++ b/style/style.css
@@ -28,14 +28,15 @@ body {
 .logo {
     margin-top: 3%;
     margin-left: 3%;
+    cursor: pointer;
 }
 
 
 .ill {
     margin-top: 4%;
-    margin-left: 8%;
-    height: 20%;
-    width: 90%;
+    margin-left: 20%;
+    height: 25%;
+    width: 100%;
 }
 
 
@@ -51,7 +52,7 @@ body {
     width: 47%;
     margin-top: 4%;
     margin-right: 3%;
-    margin-left: 3%;
+    margin-left: 10%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -63,7 +64,7 @@ h1 {
     font-family: 'Poppins', sans-serif;
     color: white;
     font-weight: 600;
-    font-size: 40px;
+    font-size: 45px;
 }
 
 .l1 {
@@ -76,7 +77,7 @@ h1 {
 
 
 p {
-    font-size: 17px;
+    font-size: 19px;
     color: white;
     font-family: 'Open Sans', sans-serif;
     margin-top: 3%;
@@ -88,18 +89,28 @@ p {
 button {
     margin-top: 5%;
     border-color: transparent;
-    height: 45px;
-    width: 155px;
+    height: 50px;
+    width: 160px;
+    font-size: 17px;
     font-family: 'Poppins', sans-serif;
     border-radius: 400px;
     color: hsl(257, 40%, 49%);
     cursor: pointer;
     transition: 1s;
+    box-shadow: #000 0 0 2px 0;
 }
 
 button:hover {
     background-color: hsl(300, 69%, 71%);
     color: white;
+    box-shadow: none;
+}
+
+footer {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 20px;
 }
 
 
@@ -107,19 +118,19 @@ button:hover {
     display: flex;
     align-items: center;
     flex-direction: row;
-    justify-content: space-between;
-    position: absolute;
-    bottom: 25px;
-    right: 25px;
-
+    justify-content: center;
+    margin-right: 30px;
+    margin-top: 25px;
 }
 
 .sm>div {
     border: 1px solid white;
     border-radius: 100%;
-    height: 40px;
-    width: 40px;
-    display: inline-block;
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     transition: 1s;
 }
@@ -171,8 +182,8 @@ i:hover {
     }
 
     .logo {
-        height: 32%;
-        width: 32%;
+        height: 50%;
+        width: 50%;
         margin-top: 5%;
         margin-left: 5%;
     }
@@ -194,36 +205,38 @@ i:hover {
     .ill {
         height: 50%;
         width: 80%;
-        margin-right: 20px;
+        margin-left: 0;
+        margin-top: 30px;
     }
 
 
     h1 {
-        font-size: 25px;
+        font-size: 35px;
         text-align: center;
         margin-top: 5%;
+        padding: 0 20px;
     }
 
 
     P {
         width: 100%;
         width: 75%;
-        font-size: 15px;
+        font-size: 18px;
         text-align: center;
         margin-top: 5%;
     }
 
 
     button {
-        width: 200px;
+        width: 150px;
+        font-size: 15px;
         margin-top: 5%;
     }
 
 
     .sm {
-        position: static;
         margin-top: 5%;
-        padding-bottom: 2%;
+        padding-bottom: 5%;
     }
 
     .twitter {
@@ -233,4 +246,12 @@ i:hover {
     .insta {
         margin-left: 10px;
     }
+
+    footer {
+        justify-content: center;
+        margin-top: 10px;
+        margin-left: 34px;
+        padding: 0;
+    }
+
 }
